--- a/CSS/hoja2.css
+++ b/CSS/hoja2.css
@@ -1,16 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-body{
-    background-color:antiquewhite ;
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%; 
+}
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    
+}
+main {
+    flex: 1; 
 }
 nav{
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
-    font-size: 19px;
-    text-decoration: none;
+    align-items: center;
+    background-color: rgb(196, 169, 129)
 }
 nav img{
-    width: 100px;
+    width: 150px;
 }
 nav a{
     font-size: 19px;
@@ -18,6 +29,12 @@ nav a{
     color: rgb(0, 0, 0);
 }
 
+nav img{
+    width: 100px;
+}
+nav a{
+    text-decoration: none;
+ }
 
 .card{
     margin: 20px;
@@ -79,4 +96,55 @@ nav a{
 }
 .tarjeta2 button{
     justify-content: center;
+}
+
+footer {
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+    background-color: antiquewhite;
+    position: relative;
+    
+}
+
+.black-section {
+    background-color: black;
+    color: white; 
+    padding: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+.black-card {
+    background-color: #333; 
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); 
+    padding: 15px;
+    width: 200px;
+    text-align: center;
+    color: white; 
+}
+
+
+.black-card img {
+    max-width: 100%;
+    border-radius: 5px;
+}
+
+
+.black-card h2 {
+    font-size: 1.2em;
+    margin: 10px 0;
+}
+
+.black-card button {
+    background-color: antiquewhite;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+    margin-top: 10px;
 }
