--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,12 @@
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+main {
+    flex: 1; 
+}
 .tarjeta{
     display: flex;
     justify-content: center;
@@ -49,4 +58,47 @@ nav a{
     }
     .button a{
         text-decoration: none;
+        
+    }
+    
+.black-card {
+    background-color: #333; 
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); 
+    padding: 15px;
+    width: 200px;
+    text-align: center;
+    color: white; 
+}
+
+
+.black-card img {
+    max-width: 100%;
+    border-radius: 5px;
+}
+
+
+.black-card h2 {
+    font-size: 1.2em;
+    margin: 10px 0;
+}
+
+.black-card button {
+    background-color: antiquewhite;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+    footer {
+        text-align: center;
+        padding: 10px;
+        width: 100%;
+        background-color: antiquewhite;
+        position: absolute; 
+        bottom: 0;
+        left: 0;
     }
